<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">悦趣</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!!!</string>

    <string name="dongtai">动态</string>
    <string name="quanzi">圈子</string>
    <string name="friend">好友</string>
    <string name="joined">已加入</string>
    <string name="recommendation">推荐</string>
    <string name="sport">体育</string>
    <string name="art">文艺</string>
    <string name="study">学习</string>

    <string name="user_phone">手机</string>
    <string name="user_email">邮箱</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="password_confirm">确定密码</string>
    <string name="college_name">学校名称</string>
    <string name="student_number">学号</string>
    <string name="student_name">姓名</string>

    <string name="action_login">登录</string>
    <string name="action_login_short">登录</string>

    <string name="action_register">注册</string>
    <string name="action_register_short">注册</string>

    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>

    <string name="create_activity">发布活动</string>

    <string name="person_center">个人中心</string>
    <string name="credit_record">信用记录</string>
    <string name="history">历史记录</string>
    <string name="setting">设置</string>

    <string name="creator_image">用户头像</string>
    <string name="activity_name">活动名称</string>
    <string name="create_time">发布时间</string>
    <string name="brief">简介：</string>
    <string name="brief_content">简介内容</string>
    <string name="plan_num_of_people">规定人数：</string>
    <string name="min_num_plan">最少人数</string>
    <string name="max_num_plan">最多人数</string>
    <string name="current_num_of_people">当前人数：</string>
    <string name="num_current">当前人数</string>
    <string name="activity_deadline">报名截止时间：</string>
    <string name="deadline">截止时间</string>
    <string name="activity_startTime">活动开始时间：</string>
    <string name="start_time">开始时间</string>
    <string name="spacer_number">~</string>
    <string name="circle_title">圈子标题</string>

    <string name="attention_circle">我关注的圈子</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

</resources>
