<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lovejoy.activity.RegisterActivity" >
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/zone_title_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/login_ivfanhui"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/return_icon"
                android:onClick="onClick1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/main_txt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/action_login"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/login_ivfanhui2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/return_icon" />
        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_phone"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1" />


            <EditText
                android:id="@+id/university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/college_name"
                android:imeActionId="@+id/register1"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/studentId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_number"
                android:imeActionId="@+id/register2"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1" />

            <EditText
                android:id="@+id/student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_name"
                android:imeActionId="@+id/register3"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionId="@+id/register4"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:imeActionId="@+id/register5"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />
            <RadioGroup
                android:id="@+id/sexGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/btnMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="男"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/btnWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="女"/>
            </RadioGroup>
            <Button
                android:id="@+id/email_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/zone_title_bg"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_register"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
