<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/zone_title_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/login_ivfanhui"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/return_icon" 
                android:onClick="onClick2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/main_txt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/action_login"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/login_ivfanhui2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/return_icon" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/user_name_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/password_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/to_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:background="@color/zone_title_bg"
            android:textSize="16dp"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:background="@color/zone_title_bg"
            android:textSize="16dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
</LinearLayout>
